systemd: use pre-wrap in motd notification to avoid scrolling
Avoids weird looking scrolling inside the notification in case
of really long paragraphs. Also respects line breaks, so 80-char
messages will look as they should.

--- a/pkg/systemd/host.css
+++ b/pkg/systemd/host.css
@@ -304,4 +304,5 @@ a.disabled {
     font-size: 14px;
     padding: 0px;
     margin: 0px;
+    white-space: pre-wrap;
 }
